fix(button): text wraps

--- a/core/src/components/button/button.ios.vars.scss
+++ b/core/src/components/button/button.ios.vars.scss
@@ -28,7 +28,7 @@ $button-ios-padding-bottom:                           $button-ios-padding-top !d
 $button-ios-padding-start:                            $button-ios-padding-end !default;
 
 /// @prop - Height of the button
-$button-ios-height:                                   3.1em !default;
+$button-ios-min-height:                                   3.1em !default;
 
 /// @prop - Border radius of the button
 $button-ios-border-radius:                            14px !default;
@@ -77,7 +77,7 @@ $button-ios-large-padding-bottom:                     $button-ios-large-padding-
 $button-ios-large-padding-start:                      $button-ios-large-padding-end !default;
 
 /// @prop - Height of the large button
-$button-ios-large-height:                             3.1em !default;
+$button-ios-large-min-height:                             3.1em !default;
 
 /// @prop - Border radius of the large button
 $button-ios-large-border-radius:                      16px !default;
@@ -102,7 +102,7 @@ $button-ios-small-padding-bottom:                     $button-ios-small-padding-
 $button-ios-small-padding-start:                      $button-ios-small-padding-end !default;
 
 /// @prop - Height of the small button
-$button-ios-small-height:                             2.1em !default;
+$button-ios-small-min-height:                             2.1em !default;
 
 /// @prop - Border radius of the small button
 $button-ios-small-border-radius:                      6px !default;
