--- a/core/src/components/button/button.md.vars.scss
+++ b/core/src/components/button/button.md.vars.scss
@@ -28,7 +28,7 @@ $button-md-padding-bottom:                              0 !default;
 $button-md-padding-start:                               1.1em !default;
 
 /// @prop - Height of the button
-$button-md-height:                                      36px !default;
+$button-md-min-height:                                      36px !default;
 
 /// @prop - Border radius of the button
 $button-md-border-radius:                               4px !default;
@@ -75,7 +75,7 @@ $button-md-large-padding-bottom:                        $button-md-large-padding
 $button-md-large-padding-start:                         $button-md-large-padding-end !default;
 
 /// @prop - Height of the large button
-$button-md-large-height:                                2.8em !default;
+$button-md-large-min-height:                                2.8em !default;
 
 /// @prop - Font size of the large button
 $button-md-large-font-size:                             20px !default;
@@ -97,7 +97,7 @@ $button-md-small-padding-bottom:                        $button-md-small-padding
 $button-md-small-padding-start:                         $button-md-small-padding-end !default;
 
 /// @prop - Height of the small button
-$button-md-small-height:                                2.1em !default;
+$button-md-small-min-height:                                2.1em !default;
 
 /// @prop - Font size of the small button
 $button-md-small-font-size:                             13px !default;
