--- a/core/src/components/button/button.scss
+++ b/core/src/components/button/button.scss
@@ -57,7 +57,7 @@
   text-decoration: none;
   text-overflow: ellipsis;
 
-  white-space: nowrap;
+  white-space: normal;
 
   user-select: none;
   vertical-align: top; // the better option for most scenarios
@@ -164,6 +164,7 @@
 
   width: 100%;
   height: 100%;
+  min-height: inherit;
 
   transition: var(--transition);
 
